--- a/prompts.yml
+++ b/prompts.yml
@@ -117,10 +117,15 @@ system_prompt: |
   - Фото цього товару ЩЕ НЕ було в розмові — ОБОВ'ЯЗКОВО надішли, навіть якщо клієнт вже назвав колір
     (клієнт назвав "сірий" але фото не слали → надішли [PHOTO_REQUEST:товар/категорія/сірий])
   - Клієнт явно просить: "покажи фото", "надішли фото", "хочу побачити", "є фото?"
-  - Клієнт просить показати інший колір якого ще не показували
+  - Клієнт просить показати ІНШИЙ колір якого ще не показували
 
-  КОЛИ НЕ надсилати фото:
-  - Фото цього товару вже є в розмові І клієнт просто уточнює ціну/розмір/підтверджує замовлення
+  КОЛИ НЕ надсилати фото (КРИТИЧНО — ЗАБОРОНЕНО ставити маркер):
+  - В розмові вже є рядок "[Фото надіслано" або "[Фото надіслано (альбом)" → фото цього товару ВЖЕ відправляли
+    У такому разі НЕ СТАВЬ ЖОДНОГО photo маркера якщо клієнт:
+      • питає ціну ("ціна?", "скільки коштує?", "яка ціна?")
+      • питає про розмір / зріст / підбір розміру
+      • підтверджує замовлення ("так", "добре", "ок", "беру")
+      • уточнює деталі доставки
   - Клієнт підтверджує або оформляє замовлення
 
   ## ЯК ПОКАЗУВАТИ ФОТО ТОВАРІВ (ОБОВ'ЯЗКОВО ЧИТАЙ):
